--- a/frontEnd/src/app/ag-maquiagem/ag-maquiagem.component.html
+++ b/frontEnd/src/app/ag-maquiagem/ag-maquiagem.component.html
@@ -21,7 +21,7 @@
 
     <!-- Weight Column -->
     <ng-container matColumnDef="weight">
-      <mat-header-cell *matHeaderCellDef> Weight </mat-header-cell>
+      <mat-header-cell *matHeaderCellDef> Data </mat-header-cell>
       <mat-cell *matCellDef="let element"> {{element.weight}} </mat-cell>
     </ng-container>
 
