--- a/frontEnd/src/app/app.component.html
+++ b/frontEnd/src/app/app.component.html
@@ -31,9 +31,9 @@
     <!-- <img src="../../ext/img/user.png" > -->
 </span>
 <nav class="mdl-navigation">
-    <span class="mdl-navigation__link" href="">Maquiagem</span>
+    <span class="mdl-navigation__link">Maquiagem</span>
     <a class="mdl-navigation__link" routerLink="/agendamaquiagem">Agenda do Dia</a>
-    <a class="mdl-navigation__link" href="">Novo Agendamento</a>
+    <a class="mdl-navigation__link" routerLink="/novamaquiagem">Novo Agendamento</a>
     <a class="mdl-navigation__link" href="">Novo Servico</a>
     <div class="android-drawer-separator"></div>
     <span class="mdl-navigation__link" href="">Cortes de Cabelo</span>
