--- a/frontEnd/src/app/ag-maquiagem/ag-maquiagem.component.css
+++ b/frontEnd/src/app/ag-maquiagem/ag-maquiagem.component.css
@@ -3,8 +3,7 @@
   display: flex;
   flex-direction: column;
   min-width: 300px;
-  max-width: 1700px;
-  margin-left: 100px;
+  margin: 2%;
 }
 
 .example-header {
@@ -19,5 +18,5 @@
 
 .mat-table {
   overflow: auto;
-  max-height: 800px;
+  padding-bottom: 10px;
 }
