--- a/frontEnd/src/app/app.component.html
+++ b/frontEnd/src/app/app.component.html
@@ -41,10 +41,6 @@
     <a class="mdl-navigation__link" href="">Novo Agendamento</a>
     <a class="mdl-navigation__link" href="">Novo Servico</a>
     <div class="android-drawer-separator"></div>
-    <span class="mdl-navigation__link" href="">Clientes</span>
-    <a class="mdl-navigation__link" href="">Novo Cliente</a>
-    <a class="mdl-navigation__link" href="">Lista de Clientes</a>
-    <div class="android-drawer-separator"></div>
     <span class="mdl-navigation__link" href="">Manicure e Pedicure</span>
     <a class="mdl-navigation__link" href="">Agenda do Dia</a>
     <a class="mdl-navigation__link" href="">Novo Agendamento</a>
@@ -52,15 +48,12 @@
     <span class="mdl-navigation__link" href="">Depilação</span>
     <a class="mdl-navigation__link" href="">Agenda do Dia</a>
     <a class="mdl-navigation__link" href="">Novo Agendamento</a>
+    <div class="android-drawer-separator"></div>
+    <span class="mdl-navigation__link" href="">Clientes</span>
+    <a class="mdl-navigation__link" routerLink="/novocliente">Novo Cliente</a>
+    <a class="mdl-navigation__link" routerLink="/consultacliente">Consultar Clientes</a>
 </nav>
 </div>
-
   <div class="mdl-cell mdl-cell--6-col"></div>
   <router-outlet></router-outlet>
-
-
-
-
-    
-
 </div>
