--- a/frontEnd/src/app/app.component.html
+++ b/frontEnd/src/app/app.component.html
@@ -34,7 +34,7 @@
     <span class="mdl-navigation__link">Maquiagem</span>
     <a class="mdl-navigation__link" routerLink="/agendamaquiagem">Agenda do Dia</a>
     <a class="mdl-navigation__link" routerLink="/novamaquiagem">Novo Agendamento</a>
-    <a class="mdl-navigation__link" href="">Novo Servico</a>
+    <a class="mdl-navigation__link" routerLink="/novoservicom">Cadastrar Servicos</a>
     <div class="android-drawer-separator"></div>
     <span class="mdl-navigation__link" href="">Cortes de Cabelo</span>
     <a class="mdl-navigation__link" href="">Agenda do Dia</a>
