--- a/frontEnd/src/app/novo-cliente/novo-cliente.component.html
+++ b/frontEnd/src/app/novo-cliente/novo-cliente.component.html
@@ -1,6 +1,6 @@
 <div class="corpo">
   <div class="example-container mat-elevation-z8">
-    <h4>Novo Agendamento</h4>
+    <h4>Novo Cliente</h4>
     <mat-form-field>
       <input matInput placeholder="Nome">
     </mat-form-field>
