--- a/frontEnd/src/app/ag-maquiagem/ag-maquiagem.component.html
+++ b/frontEnd/src/app/ag-maquiagem/ag-maquiagem.component.html
@@ -1,4 +1,5 @@
 <div class="example-container mat-elevation-z8">
+  <h4>Agendamentos do Dia</h4>
   <div class="example-header">
     <mat-form-field>
       <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
