--- a/frontEnd/src/app/ag-depilacao/ag-depilacao.component.html
+++ b/frontEnd/src/app/ag-depilacao/ag-depilacao.component.html
@@ -1,5 +1,5 @@
 <div class="example-container mat-elevation-z8">
-  <h4>Agendamentos de Maquiagem</h4>
+  <h4>Agendamentos de Depilacao</h4>
   <div class="example-header">
     <mat-form-field>
       <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
