--- a/frontEnd/src/app/novo-corte/novo-corte.component.html
+++ b/frontEnd/src/app/novo-corte/novo-corte.component.html
@@ -1,8 +1,8 @@
 <div class="example-container mat-elevation-z8">
-	<h4>Cadastro de Maquiagens</h4>
+	<h4>Cadastro de Cortes</h4>
 	<div class="row">
 		<mat-form-field id="nome">
-			<input matInput placeholder="Nome do Servico">
+			<input matInput placeholder="Nome do Corte">
 		</mat-form-field>
 		<mat-form-field id="tama">
 			<input matInput placeholder="Valor" type="number" class="example-right-align">
