--- a/frontEnd/src/app/teste/teste.component.css
+++ b/frontEnd/src/app/teste/teste.component.css
@@ -1,3 +1,9 @@
-#corpo{
-    margin-left: 40%;
+.example-card {
+  max-width: 400px;
+  margin-left: 20%;
+}
+
+.example-header-image {
+  background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
+  background-size: cover;
 }
