--- a/frontEnd/src/app/nova-ag-depilacao/nova-ag-depilacao.component.css
+++ b/frontEnd/src/app/nova-ag-depilacao/nova-ag-depilacao.component.css
@@ -15,8 +15,8 @@
     width: 30%;
   }
   #Data{
-    width: 22%;
-    margin-left: 3%;
+    width: 11%;
+    margin-left: 2%;
   }
   #valor{
     margin-left: 10%;
@@ -32,4 +32,8 @@
 }
 #canc{
   margin-left: 2%;
+}
+#hora{
+  margin-left: 1%;
+  width: 11%;
 }
