--- a/frontEnd/src/app/teste/teste.component.css
+++ b/frontEnd/src/app/teste/teste.component.css
@@ -7,3 +7,12 @@
   background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
   background-size: cover;
 }
+
+#teste mat-card{
+	display: inline-block;
+	margin-left: 1%;
+	min-width: 400px;
+}
+#titulo{
+	margin-left: 5%;
+}
