--- a/frontEnd/src/app/ag-maquiagem/ag-maquiagem.component.html
+++ b/frontEnd/src/app/ag-maquiagem/ag-maquiagem.component.html
@@ -29,7 +29,7 @@
     <!-- Symbol Column -->
     <ng-container matColumnDef="symbol">
       <mat-header-cell *matHeaderCellDef>  </mat-header-cell>
-      <mat-cell *matCellDef="let element"> <button mat-raised-button color="primary">Abrir</button> </mat-cell>
+      <mat-cell *matCellDef="let element"> <button mat-raised-button color="primary" [routerLink]="['/teste', element.position]">Abrir</button> </mat-cell>
     </ng-container>
 
     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
