--- a/frontEnd/src/app/teste/teste.component.html
+++ b/frontEnd/src/app/teste/teste.component.html
@@ -11,7 +11,7 @@
   </mat-card-header>
   <mat-card-content>
   
-    <mat-table #table [dataSource]="dataSource">
+    <mat-table #table [dataSource]="maq">
 
     <!-- Position Column -->
     <ng-container matColumnDef="position">
@@ -19,7 +19,7 @@
       <mat-cell *matCellDef="let element"> {{element.position}} </mat-cell>
     </ng-container>
 
-    <!-- Name Column -->
+    <!-- Name Column --> 
     <ng-container matColumnDef="name">
       <mat-header-cell *matHeaderCellDef> Name </mat-header-cell>
       <mat-cell *matCellDef="let element"> {{element.name}} </mat-cell>
